used List.of instead of arrays.aslist approach then deleted unused library of Arrays